
if INSTALL_LIBRARY
linux_ntfsincludedir = $(includedir)/ntfs-3g
linux_ntfsinclude_HEADERS = \
	attrib.h		\
	attrlist.h		\
	bitmap.h		\
	bootsect.h		\
	collate.h		\
	compat.h		\
	compress.h		\
	debug.h			\
	device.h		\
	device_io.h		\
	dir.h			\
	endians.h		\
	index.h			\
	inode.h			\
	layout.h		\
	lcnalloc.h		\
	logfile.h		\
	logging.h		\
	mft.h			\
	mst.h			\
	ntfstime.h		\
	runlist.h		\
	security.h		\
	support.h		\
	types.h			\
	unistr.h		\
	version.h		\
	volume.h
endif

MAINTAINERCLEANFILES = Makefile.in
