
MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

headers = \
	attrib.h	\
	attrlist.h	\
	bitmap.h	\
	bootsect.h	\
	collate.h	\
	compat.h	\
	compress.h	\
	debug.h		\
	device.h	\
	device_io.h	\
	dir.h		\
	endians.h	\
	index.h		\
	inode.h		\
	layout.h	\
	lcnalloc.h	\
	logfile.h	\
	logging.h	\
	mft.h		\
	misc.h		\
	mst.h		\
	ntfstime.h	\
	runlist.h	\
	security.h	\
	support.h	\
	types.h		\
	unistr.h	\
	volume.h

if INSTALL_LIBRARY
ntfs3ginclude_HEADERS = $(headers)
else
noinst_HEADERS = $(headers)
endif

