
linux_ntfsincludedir = $(includedir)/ntfs
linux_ntfsinclude_HEADERS = \
	attrib.h		\
	attrlist.h		\
	bitmap.h		\
	bootsect.h		\
	collate.h		\
	compat.h		\
	compress.h		\
	debug.h			\
	device.h		\
	device_io.h		\
	dir.h			\
	endians.h		\
	gnome-vfs-method.h	\
	gnome-vfs-module.h	\
	index.h			\
	inode.h			\
	layout.h		\
	lcnalloc.h		\
	list.h			\
	logfile.h		\
	mft.h			\
	mst.h			\
	runlist.h		\
	security.h		\
	support.h		\
	timeconv.h		\
	types.h			\
	unistr.h		\
	volume.h

